<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.History">

    <TextView
        android:id="@+id/recent_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_buy"
        android:fontFamily="@font/yeon_sung"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"/>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/recent_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="15dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:elevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/recent_buy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">
            
            <ImageView
                android:id="@+id/recent_buy_image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/menu1"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <TextView
                android:id="@+id/recent_buy_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/yeon_sung"
                android:textSize="15sp"
                android:text="@string/recent_food_name"
                app:layout_constraintLeft_toRightOf="@id/recent_buy_image"
                app:layout_constraintTop_toTopOf="@id/recent_buy_image"
                />

            <TextView
                android:id="@+id/recent_buy_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textSize="19sp"
                android:textColor="@color/textColor"
                android:fontFamily="@font/lato"
                android:text="$7"
                app:layout_constraintLeft_toRightOf="@id/recent_buy_image"
                app:layout_constraintBottom_toBottomOf="@id/recent_buy_image"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/circleColor"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            
        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/previously_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/previously_buy"
        app:layout_constraintTop_toBottomOf="@id/recent_card"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/history_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/previously_buy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>